Fix spacing on first page

--- a/inst/assets/modules/body.css
+++ b/inst/assets/modules/body.css
@@ -67,7 +67,7 @@ p {
 hr {
   border: none;
   height: 0.5pt;
-  background-color: rgba(0,0,0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 blockquote {
@@ -93,15 +93,21 @@ blockquote {
   margin: 0 5px 0 0;
 }
 
-.dotted-div > p {
-  margin-block-start: 0.1em;
-  margin-block-end: 0.1em;
+.dotted-div>ul>li>p {
+  margin-block-start: 0.2em;
+  margin-block-end: 0;
 }
+
+.dotted-div>ul {
+  padding-inline-start: 0.5cm;
+  margin-block-start: 0;
+}
+
 
 .small-text {
   font-size: 12px;
 }
 
-.text-it > p {
-  font-style: italic ;
+.text-it>p {
+  font-style: italic;
 }
